fixed visibility of straatbeeld fullscreen button tg-4742

--- a/modules/map/components/toggle-fullscreen/_toggle-fullscreen.scss
+++ b/modules/map/components/toggle-fullscreen/_toggle-fullscreen.scss
@@ -3,11 +3,4 @@ dp-toggle-fullscreen {
   right: 8px;
   top: 8px;
   z-index: 1000;
-
-
-  .is-embed &,
-  .is-embed-preview &,
-  .is-print-mode & {
-    display: none;
-  }
 }
